--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lib",
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WindyPear-Team/koishi-plugin-adapter-gsuid.git"
+  },
+  "homepage": "https://doc.flweb.cn/koi/gsuid-adapter",
   "license": "MIT",
   "keywords": [
     "chatbot",
