--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-adapter-gsuid",
-  "description": "连接到gsuid",
-  "version": "1.1.1",
+  "description": "连接到gsuid，为QQ官机量身定做",
+  "version": "1.2.0",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
